--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,1 +1,40 @@
+// VARIABLES
+
 $base-size: 12px;
+$base-padding: 24px;
+
+$black: #000;
+$white: #ffffff;
+
+$background-lightgrey: #F2F2F2;
+$background-midgrey: #E6E6E6;
+$background-darkrey: #25282A;
+$color-background: #E3E3E3;
+
+$primary: #ffd167;
+
+$sucess: #aa9c3d;
+$danger: #d58e32;
+
+//Media breakpoints
+
+$laptop-breakpoint: 1200px;
+$tablet-breakpoint: 768px;
+$mobile-breakpoint: 425px;
+
+/*transition values*/
+
+$background-color-transition: 250ms;
+$color-transition: 250ms;
+$border-color-transition: 250ms;
+
+%hoverAnimation {
+    transition: background-color $background-color-transition linear, color $color-transition linear,
+    border-color $border-color-transition linear;
+
+    transform: translate(0, 0);
+}
+
+/*BUTTONS*/
+
+$offer-active-dot: $primary;
