implement header. Insert logo, navigation, languages and user options

--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -1,4 +1,20 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+
+    .header {
+        background-color: $header;
+
+          @media (max-width: $tablet-breakpoint) {
+            justify-content: center;
+          }
+          @media (max-width: $mobile-breakpoint) {
+            justify-content: center;
+          }
+
+
+        .logoHeader {
+            padding-top: 20px;
+        }
+    }
+}
