--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,7 +9,7 @@ body {
   background-color: $background-midgrey;
   font-size:$base-font-size;
   line-height: 1.7;
-  color: $color-font
+  color: $black;
 }
 
 .header {
@@ -25,6 +25,6 @@ ul {
     list-style: none;
 }
 
-ul li.slick-active button::before {
-  color: $offer-active-dot;
-}
+// ul li.slick-active button::before {
+//   color: $offer-active-dot;
+// }
