--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -13,10 +13,18 @@ $primary: #ffd167;
 $sucess: #aa9c3d;
 $danger: #d58e32;
 
+//logo color
+
+$red: #da5358;
+$orange: #f6942e;
+$yellow: #f8ed33;
+$green: #8ec641;
+$blue: #1d75bd;
+$purple: #6a4290;
 
 // text
 
-$base-padding: 24px;
+$base-padding: 50px;
 $base-font-size: 16px;
 $font-size-header: 25px;
 
@@ -63,3 +71,10 @@ $border-color-transition: 250ms;
 /*BUTTONS*/
 
 $offer-active-dot: $primary;
+
+/*Header*/
+
+$header: $white;
+$menuBarUnderline: $white;
+$menuBarUnderlineActiveHover: $black;
+$userOptions: $background-darkrey;
