--- a/src/components/layout/UserOptions/UserOptions.module.scss
+++ b/src/components/layout/UserOptions/UserOptions.module.scss
@@ -35,12 +35,17 @@
           align-items: center;
           @extend %hoverAnimation;
           font-weight: 500;
+          height:10px;
 
           &:hover,
           &.active {
             color: $color-font;
             border-color: $menuBarUnderlineActiveHover;
           }
+        }
+
+        .split {
+          border-right: 1px solid;
         }
     }
 
