--- a/src/components/views/About/About.module.scss
+++ b/src/components/views/About/About.module.scss
@@ -1,4 +1,11 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+    .img {
+        height: 100vh;
+        width: 50%;
+        img {
+            height: 100%;
+        }
+    }
+}
