--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,10 +6,12 @@
 body {
   font-family: $text-main;
   margin: 0;
-  background-color: $background-midgrey;
+//   background-color: $background-midgrey;
+  background-color: $background-lightgrey;
+
   font-size:$base-font-size;
   line-height: 1.7;
-  color: $black;
+  color: $background-darkrey;
 }
 
 .header {
