--- a/src/components/views/About/About.module.scss
+++ b/src/components/views/About/About.module.scss
@@ -1,11 +1,47 @@
 @import '../../../styles/settings.scss';
 
 .root {
-    .img {
-        height: 100vh;
-        width: 50%;
-        img {
-            height: 100%;
+
+    .wraper {
+        position: relative;
+        display: flex;
+
+        .imgAbout{
+            position: absolute;
+            width: 50%;
+            height: 86vh;
+            overflow: hidden;
+            cursor: pointer;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                transition: all 1s;
+                &:hover {
+                    transform: scale(1.1, 1.1);
+                }
+            }
+        }
+
+        .description {
+            padding: 45px 0 36px 55%;
+            text-align: center;
+            margin-right: 60px;
+
+            .sectionTitle {
+                position: relative;
+                font-size: $font-size-header;
+                margin: 45px 0 45px 0;
+                font-weight: $font-weight-bold;
+            }
+
+            .sectionSubtitle {
+                position: relative;
+                font-size: $font-size-header;
+                font-family: $text-logo;
+                margin: 45px 0 60px 0;
+            }
         }
     }
 }
