--- a/client/src/components/features/Product/Product.module.scss
+++ b/client/src/components/features/Product/Product.module.scss
@@ -1,4 +1,8 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+    .img {
+        height: 300px;
+        width: 300px;
+    }
+}
