--- a/client/src/components/layout/MainLayout/MainLayout.module.scss
+++ b/client/src/components/layout/MainLayout/MainLayout.module.scss
@@ -1,4 +1,8 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+    .footer {
+        background-color: black;
+        color: $background-lightgrey;
+    }
+}
