--- a/client/src/components/common/Logo/Logo.module.scss
+++ b/client/src/components/common/Logo/Logo.module.scss
@@ -1,7 +1,6 @@
 @import '../../../styles/settings.scss';
 
 .root {
-
     .logo {
         position: relative;
         display: flex;
@@ -13,7 +12,6 @@
 
     .logoImg {
         height: 50px;
-        margin-bottom: 25px;
     }
 
     .logoName {
@@ -21,7 +19,7 @@
         color: $black;
         font-size: 50px;
         font-weight: 550;
-        margin-left: 10px;
+        margin: 0 10px;
+        padding-top: 10px;
     }
-
 }
