--- a/client/src/components/views/Homepage/Homepage.module.scss
+++ b/client/src/components/views/Homepage/Homepage.module.scss
@@ -1,4 +1,14 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+    .container {
+        width:100%;
+        max-width: calc(100% - 240px);
+        margin: 0 auto;
+        padding: 0 15px;
+        top: 50px;
+        left: 240px;
+        position: absolute;
+        z-index: -1;
+    }
+}
