styled about section

--- a/client/src/components/common/Button/Button.module.scss
+++ b/client/src/components/common/Button/Button.module.scss
@@ -1,4 +1,14 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+    .btnAbaut {
+        color: $background-darkrey ;
+        border-color:  $background-darkrey ;
+        &:hover, &:active {
+            color: $white;
+            background-color: $background-darkrey;
+            border-color: $background-darkrey ;
+
+        }
+    }
+}
