--- a/client/src/components/views/About/About.module.scss
+++ b/client/src/components/views/About/About.module.scss
@@ -2,32 +2,41 @@
 
 .root {
 
-    .wraper {
-        position: relative;
-        display: flex;
+    .abaut {
+          @media (max-width: $tablet-breakpoint) {
+            justify-content: center;
+          }
+          @media (max-width: $mobile-breakpoint) {
+            justify-content: center;
+          }
+        .titleDominant {
+            color: $orange;
+            font-size: 5rem;
+            font-weight: 600;
+            // font-family: $text-logo;
+            margin: 0 0 0 20px;
+        }
 
-        .imgAbout{
-            position: absolute;
-            width: 50%;
-            height: 86vh;
-            overflow: hidden;
+        .aboutImgContainer {
+            position: relative;
             cursor: pointer;
-
-            img {
+            &::before {
+                content: '';
+                position: absolute;
+                top: -1.5rem;
+                left: 1.7rem;
                 width: 100%;
                 height: 100%;
-                object-fit: cover;
-                transition: all 1s;
-                &:hover {
-                    transform: scale(1.1, 1.1);
-                }
+                outline: 0.5rem solid $orange;
+                transition: all 1s linear;
             }
         }
 
-        .description {
-            padding: 45px 0 36px 55%;
-            text-align: center;
-            margin-right: 60px;
+        .aboutImgContainer:hover:before{
+            top: 0;
+            left: 0;
         }
+
+
     }
 }
