--- a/client/src/styles/settings.scss
+++ b/client/src/styles/settings.scss
@@ -17,6 +17,8 @@ $green: #8ec641;
 $blue: #1d75bd;
 $purple: #6a4290;
 
+$pink: #ef7998;
+
 // text
 
 $base-padding: 45px;
@@ -30,7 +32,6 @@ $color-font: $black;
 
 $text-main: 'Montserrat', sans-serif;
 $text-logo: 'Sacramento', cursive;
-
 
 //Media breakpoints
 
