--- a/client/src/styles/settings.scss
+++ b/client/src/styles/settings.scss
@@ -12,12 +12,13 @@ $background-darkrey: #25282A;
 
 $red: #da5358;
 $orange: #f6942e;
-$yellow: #f8ed33;
+$yellowc: #fed136;
 $green: #8ec641;
 $blue: #1d75bd;
 $purple: #6a4290;
 
 $pink: #ef7998;
+$yellow: #fed136;
 
 // text
 
