add productList to homepage BUG with flex

--- a/client/src/components/features/Product/Product.module.scss
+++ b/client/src/components/features/Product/Product.module.scss
@@ -2,4 +2,63 @@
 
 .root {
 
+    .singleItem {
+        transition: all 0.3 linear;
+        // height: 400px;
+        // widows: 500px;
+        &:hover {
+            box-shadow: 0 10px 15px $background-darkrey            ;
+        }
+
+        .cardBody {
+            .iconHart {
+                font-size: 25px;
+                cursor: pointer;
+                :hover {
+                    color: $orange;
+                }
+            }
+
+            .itemTitle {
+                font-size: 20px;
+            }
+        }
+
+        .imgContainer {
+            position: relative;
+            overflow: hidden;
+            cursor: pointer;
+            &:hover {
+                .storeImg {
+                    transform: scale(1.2);
+                }
+
+                .storeItemIcon {
+                    transform: translate(0, 0);
+                }
+            }
+
+            .storeImg {
+                transition: all 1s ease-in-out;
+                object-fit: cover;
+            }
+
+            .storeItemIcon {
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                padding: 0.7rem;
+                background: $orange;
+                border-top-left-radius: 1rem;
+                font-size: 30px;
+                color: $white;
+                transition: all 1s ease-in-out;
+                transform: translate(100%, 100%);
+                &:hover {
+                    background-color: $white;
+                    color: $orange;
+                }
+            }
+        }
+    }
 }
