--- a/client/src/components/features/Search/Search.module.scss
+++ b/client/src/components/features/Search/Search.module.scss
@@ -7,9 +7,8 @@
         border: 0;
 
         .searchBox {
-            background-color: $red;
+            background-color: $orange;
             color: $white;
-            outline: none;
         }
     }
 }
