--- a/client/src/components/views/Homepage/Homepage.module.scss
+++ b/client/src/components/views/Homepage/Homepage.module.scss
@@ -3,10 +3,10 @@
 .root {
 
     .titleDominant {
-        color: $red;
+        color: $orange;
         font-size: 5rem;
         font-weight: 600;
-        // font-family: $text-logo;
+        font-family: $text-logo;
         margin: 0 0 0 20px;
     }
 }
