--- a/client/src/components/features/ProductList/ProductList.module.scss
+++ b/client/src/components/features/ProductList/ProductList.module.scss
@@ -1,62 +1,5 @@
 @import '../../../styles/settings.scss';
 
-.root {
+// .root {
 
-    .store {
-        .titleDominant {
-            color: $red;
-            font-size: 5rem;
-            font-weight: 600;
-            // font-family: $text-logo;
-            margin: 0 0 0 20px;
-        }
-
-        .buttonAll {
-            color: $red;
-            &:hover, &:active {
-                background-color: $red;
-                color: $white;
-            }
-        }
-
-        .buttonNews {
-            color: $red;
-            &:hover {
-                background-color: $red;
-                color: $white;
-            }
-        }
-
-        .buttonLolilipop {
-            color: $red;
-            &:hover {
-                background-color: $red;
-                color: $white;
-            }
-        }
-
-        .buttonHC {
-            color: $red;
-            &:hover {
-                background-color: $red;
-                color: $white;
-            }
-        }
-
-        .buttonJelly {
-            color: $red;
-            &:hover {
-                background-color: $red;
-                color: $white;
-            }
-        }
-
-        .buttonGums {
-            color: $red;
-            &:hover {
-                background-color: $red;
-                color: $white;
-            }
-        }
-    }
-}
+// }
