--- a/client/src/components/views/About/About.module.scss
+++ b/client/src/components/views/About/About.module.scss
@@ -13,7 +13,7 @@
             color: $orange;
             font-size: 5rem;
             font-weight: 600;
-            // font-family: $text-logo;
+            font-family: $text-logo;
             margin: 0 0 0 20px;
         }
 
