--- a/client/src/components/layout/MainLayout/MainLayout.module.scss
+++ b/client/src/components/layout/MainLayout/MainLayout.module.scss
@@ -2,7 +2,53 @@
 
 .root {
     .footer {
-        background-color: black;
-        color: $background-lightgrey;
+        background: $background-darkrey;
+        .icons {
+            padding-top: 20px;
+            li {
+                display: inline-block;
+                font-size: 0;
+                margin: 10px 40px;
+                a {
+                    color:$background-darkrey;
+                    i {
+                        font-size: 30px;
+                        background: $background-midgrey;
+                        width: 60px;
+                        height: 60px;
+                        line-height: 60px;
+                        border-radius: 50%;
+                        &:hover {
+                            transform: scale(1.2,1.2);
+                            background: $orange;
+                            color:$white;
+                        }
+                    }
+                }
+            }
+        }
+
+        .contact {
+            color: $white;
+            font-size: 18px;
+            h3 {
+                font-size: 50px;
+                font-family: $text-logo;
+            }
+            .contactIcon {
+                margin-right: 50px;
+                cursor: pointer;
+                &:hover {
+                    color: $orange ;
+                }
+
+                i {
+                    padding-left:30px;
+                    margin-right: 60px;
+                    font-size: 20px;
+                }
+            }
+
+        }
     }
 }
