--- a/client/src/components/features/ProductList/ProductList.module.scss
+++ b/client/src/components/features/ProductList/ProductList.module.scss
@@ -1,15 +1,11 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-//     .productListCart {
-//         display: flex;
-//         justify-content: center;
-//         align-items: center;
-
-//         .singleItem {
-//             flex: 0 1 34rem;
-//             margin: 1rem;
-//             height: 50rem;
-//         }
-//     }
-// }
+.root {
+    .wrapper {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      align-items: center;
+  }
+}
