--- a/client/src/components/layout/Footer/Footer.module.scss
+++ b/client/src/components/layout/Footer/Footer.module.scss
@@ -1,53 +1,53 @@
 @import '../../../styles/settings.scss';
 
-
 .root {
-    .footer {
-        background: $background-darkrey;
+    .footerMenu {
+      background-color: $background-darkrey;
+      padding: 3rem 0;
 
-        .icons {
+      .menuWrapper {
+        color: white;
+        h6 {
+          color: $orange;
+          // font-weight: bold;
+          text-transform: uppercase;
+          margin: 0 0 1rem 0;
+        }
+
+        ul {
+          margin: 0 0 1.5rem 0;
+          padding: 0;
+          list-style: none;
+          li {
             a {
-                color:$background-darkrey;
-                i {
-                    font-size: 30px;
-                    background: $background-midgrey;
-                    width: 60px;
-                    height: 60px;
-                    line-height: 60px;
-                    border-radius: 50%;
-                    &:hover {
-                        transform: scale(1.2,1.2);
-                        background: $orange;
-                        color:$white;
-                    }
-                }
+              line-height: 30px;
+              color: $white;
+              &:hover {
+                color: $orange;
+                text-decoration: none;
+              }
             }
+          }
         }
 
-        .contact {
-            color: $white;
-            font-size: 18px;
-            h3 {
-                font-size: 50px;
-                font-family: $text-logo;
-                .logoImg {
-                    width: 50px;
-                    padding-bottom: 10px;
-                }
-            }
-            .contactIcon {
-                margin-right: 50px;
-                cursor: pointer;
-                &:hover {
-                    color: $orange ;
-                }
-
-                i {
-                    padding-left: 1rem;
-                    margin-right: 1rem;
-                    font-size: 20px;
-                }
-            }
+        i {
+          margin-right: 1rem;
         }
+      }
     }
-}
+
+    .bottomBar {
+      background-color: $black;
+
+      :global(.container) > :global(.row) {
+        height: 95px;
+      }
+
+      .copyright {
+          margin: 0;
+          color: $background-lightgrey;
+          font-size: 14px;
+          line-height: 26px;
+      }
+    }
+  }
