--- a/client/src/components/views/Contact/Contact.module.scss
+++ b/client/src/components/views/Contact/Contact.module.scss
@@ -3,11 +3,11 @@
 .root {
 
     .contact {
-        border: 2px solid $orange;
+        border: 1px solid $orange;
         border-radius: 1%;
         padding: 50px;
         min-height: 800px;
-
+        background-color: whitesmoke;
         .formPosition {
             display: flex;
             flex-wrap: wrap;
@@ -36,7 +36,6 @@
                     margin: 5px 0;
                     font-size: 15px;
                     outline: none;
-                    max-height: 900px;
                     &::placeholder {
                         color: $black;
                         font-size: 15px;
