hide work in progres

--- a/client/src/components/layout/MenuBar/MenuBar.module.scss
+++ b/client/src/components/layout/MenuBar/MenuBar.module.scss
@@ -32,7 +32,7 @@
           padding: 1rem;
           text-decoration: none;
           display: flex;
-          border-bottom: 1px solid $menuBarUnderline;
+          // border-bottom: 1px solid $menuBarUnderline;
           @extend %hoverAnimation;
           font-weight: 500;
 
