--- a/client/src/components/views/Cart/Cart.module.scss
+++ b/client/src/components/views/Cart/Cart.module.scss
@@ -1,4 +1,77 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+
+    .cart {
+        @media (max-width: $tablet-breakpoint) {
+          justify-content: center;
+        }
+        @media (max-width: $mobile-breakpoint) {
+          justify-content: center;
+        }
+
+        .wrap {
+            position: relative;
+            justify-content: space-between;
+            background-color: $white;
+            margin-bottom: 20px;
+
+            .image {
+                position: absolute;
+                height: 150px;
+                min-width: 150px;
+                max-width: 150px;
+                .img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            .description {
+                margin: 0 0 0 33%;
+                min-height: 150px;
+
+                .productName {
+                    font-weight: bold;
+                    font-size: 18px;
+                    display: flex;
+                    justify-content: center;
+                    padding-top: 20px;
+                }
+
+                .cartDesc {
+                    font-size: 20px;
+                    .cartItemRemove{
+                        color: $orange;
+                        font-size: 20px;
+                        transition: all 1s ease-in-out;
+                        margin: auto 0;
+                        margin-right: 20px;
+                        &:hover {
+                            transform: scale(1.1);
+                            color: $background-darkrey;
+                        }
+                    }
+                }
+            }
+        }
+
+        .summary {
+            font-size: 16px;
+            display: flex;
+            justify-content: space-between;
+            font-weight: bold;
+            span{
+                color: $orange;
+                font-size: 20px;
+            }
+        }
+
+        .order {
+            border-left: 1px solid $background-darkrey;
+
+        }
+    }
+}
+
