add amountWidget to cart in order and sindle product

--- a/client/src/components/views/Cart/Cart.module.scss
+++ b/client/src/components/views/Cart/Cart.module.scss
@@ -53,6 +53,9 @@
                             color: $background-darkrey;
                         }
                     }
+                    .amountWidget {
+                        height: 10px;
+                    }
                 }
             }
         }
