move one product cart to separate component CartBox

--- a/client/src/components/layout/UserOptions/UserOptions.module.scss
+++ b/client/src/components/layout/UserOptions/UserOptions.module.scss
@@ -53,5 +53,24 @@
         color: $userOptions;
     }
 
+    .iconbascet {
+      color: $background-darkrey;
+      transition: all 1s ease-in-out;
+      &:hover {
+          transform: scale(2.2);
+      }
+
+      .bascet {
+        color: $black;
+        margin-right: 10px;
+      }
+
+      span {
+        color: $black;
+        font-weight: bold;
+      }
+
+    }
+
 }
 
