--- a/client/src/components/common/CartBox/CartBox.module.scss
+++ b/client/src/components/common/CartBox/CartBox.module.scss
@@ -1,6 +1,7 @@
 @import '../../../styles/settings.scss';
 
 .root {
+
     .wrap {
         position: relative;
         justify-content: space-between;
@@ -9,19 +10,32 @@
 
         .image {
             position: absolute;
-            height: 150px;
-            min-width: 150px;
-            max-width: 150px;
+            height: 100px;
+            min-width: 100px;
+            max-width: 100px;
+            @media (max-width: $mobile-breakpoint) {
+                margin: 0 0 20px 80px;
+            }
+
             .img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                border-radius: 50%;
+                margin: 25px 0 0 15px;
+
+
             }
         }
 
         .description {
             margin: 0 0 0 33%;
             min-height: 150px;
+            @media (max-width: $mobile-breakpoint) {
+                min-height: 200px;
+                margin: 0 0 0 10px;
+                padding: 40% 0 10px 10px;
+            }
 
             .productName {
                 font-weight: bold;
