--- a/client/src/components/common/CartMenu/CartMenu.module.scss
+++ b/client/src/components/common/CartMenu/CartMenu.module.scss
@@ -15,17 +15,24 @@
           width: 100%;
         }
     }
+
     .iconbascet {
-        color: $background-darkrey;
+        color: $black;
+        font-size: 20px;
+        font-weight: bold;
         transition: all 1s ease-in-out;
         &:hover {
             transform: scale(1.5);
+              color: $orange;
         }
 
         .bascet {
           color: $black;
         }
     }
+
+
+
 
 
 }
