--- a/client/src/components/layout/UserOptions/UserOptions.module.scss
+++ b/client/src/components/layout/UserOptions/UserOptions.module.scss
@@ -25,7 +25,6 @@
         }
 
         a {
-          color: $background-midgrey;
           font-size: $base-font-size;
           padding: 1rem;
           text-decoration: none;
@@ -35,6 +34,14 @@
           font-weight: 500;
           height:10px;
 
+          &:hover {
+            color: $white;
+            border-color: $menuBarUnderlineActiveHover;
+          }
+        }
+
+        .unactive, .active {
+          color: $background-midgrey;
           &:hover,
           &.active {
             color: $color-font;
