--- a/client/src/components/views/Cart/Cart.module.scss
+++ b/client/src/components/views/Cart/Cart.module.scss
@@ -21,10 +21,11 @@
             }
         }
 
-
         .order {
             border-left: 1px solid $background-darkrey;
-
+            .btnBack {
+                margin-left: 10px;
+            }
         }
     }
 }
